# superb-ai-curate-python

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  genindex.html  index.html  objects.inv  poetry.toml  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-flow.yml  docs-pages.yaml
_modules/: index.html
_modules/spb_curate/: api_requestor.html  config.html  error.html  http_client.html  superb_ai_response.html  util.html
_modules/spb_curate/abstract/: superb_ai_object.html
_modules/spb_curate/abstract/api/: resource.html
_modules/spb_curate/curate/: api.html
_modules/spb_curate/curate/model/: annotation_types.html
_sources/intro/: install.rst.txt  overview.rst.txt
_sources/source/: modules.rst.txt  spb_curate.abstract.api.rst.txt  spb_curate.abstract.rst.txt  spb_curate.curate.model.rst.txt  spb_curate.curate.rst.txt  spb_curate.rst.txt
docs/: conf.py  index.rst
docs/intro/: tutorial.rst
intro/: install.html  overview.html  tutorial.html
source/: modules.html  spb_curate.abstract.api.html  spb_curate.abstract.html  spb_curate.curate.html  spb_curate.curate.model.html  spb_curate.html
spb_curate/: __init__.py  api_requestor.py  config.py  error.py  http_client.py  object_mapping.py  superb_ai_response.py  util.py  version.py
spb_curate/abstract/: __init__.py  superb_ai_object.py
spb_curate/abstract/api/: __init__.py  resource.py
spb_curate/curate/: __init__.py  api.py
spb_curate/curate/api/: __init__.py  abstract.py  curate.py  enums.py  job.py  model_diagnosis.py  settings.py
spb_curate/curate/model/: __init__.py  annotation_types.py
tests/: test_api_requestor.py  test_superb_object.py  test_util.py  test_version.py
tests/api/: conftest.py  test_annotation_types.py
tests/api/curate/: conftest.py  test_curate.py  test_model_diagnosis.py
